--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -40,7 +40,7 @@
     "TitleLiveTV": "Live TV",
     "TitleSync": "Synchroniseer",
     "ButtonDonate": "Doneren",
-    "HeaderMyMedia": "My Media",
+    "HeaderMyMedia": "Mijn media",
     "TitleNotifications": "Meldingen",
     "ErrorLaunchingChromecast": "Er is een fout opgetreden bij het starten van chromecast. Zorg ervoor dat uw apparaat is aangesloten op uw draadloze netwerk.",
     "MessageErrorLoadingSupporterInfo": "Er is een fout opgetreden bij het laden van uw supporter informatie. Probeer het later opnieuw.",
@@ -199,7 +199,7 @@
     "HeaderSplitMedia": "Splits Media Apart",
     "MessageConfirmSplitMedia": "Weet u zeker dat u de media bronnen wilt splitsen in afzonderlijke items?",
     "HeaderError": "Fout",
-    "MessageChromecastConnectionError": "Your Chromecast receiver is unable to connect to your Emby Server. Please check their connections and try again.",
+    "MessageChromecastConnectionError": "Je Chromcast ontvanger kan niet met je Emby server verbinden. Controleer je verbindingen en probeer het opnieuw.",
     "MessagePleaseSelectOneItem": "Selecteer ten minste een item.",
     "MessagePleaseSelectTwoItems": "Selecteer ten minste twee items.",
     "MessageTheFollowingItemsWillBeGrouped": "De volgende titels worden gegroepeerd in \u00e9\u00e9n item:",
@@ -535,9 +535,9 @@
     "MessageInstallPluginFromApp": "Deze plugin moet ge\u00efnstalleerd worden vanuit de app waarin u het wilt gebruiken.",
     "ValuePriceUSD": "Prijs {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "U bent geregistreerd voor deze functie, en zal deze kunnen blijven gebruiken met uw actieve supporter lidmaatschap.",
-    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
+    "MessageChangeRecurringPlanConfirm": "Na het voltooien van deze transactie zal je de eerdere terugkerende donatie in je PayPal account moeten annuleren. Bedankt voor de ondersteuning aan Emby.",
     "MessageSupporterMembershipExpiredOn": "Uw supporter lidmaatschap is verlopen op {0}",
-    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
+    "MessageYouHaveALifetimeMembership": "Je hebt een levenslang supporter lidmaatschap. Je kan eenmalige- en terugkerende donaties doen met onderstaande opties. Bedankt voor de ondersteuning aan Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "U hebt een actief {0} lidmaatschap. U kunt met de opties hieronder uw lidmaatschap upgraden.",
     "ButtonDelete": "Verwijderen",
     "HeaderEmbyAccountAdded": "Emby Account Toegevoegd",
@@ -675,12 +675,12 @@
     "WebClientTourMetadataManager": "Klik wijzigen om de metadata manager te openen",
     "WebClientTourPlaylists": "Maak eenvoudig een afspeellijst en mixlijst, en speel deze op elk apparaat",
     "WebClientTourCollections": "Maak film Collecties door boxsets samen te voegen",
-    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
-    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
+    "WebClientTourUserPreferences1": "Met gebruikersvoorkeuren kan je de manier waarop je bibliotheek getoond wordt in alle Emby apps aanpassen",
+    "WebClientTourUserPreferences2": "Stel eenmalig je voorkeuren voor je audio- en ondertitelingstaal voor elke Emby app",
     "WebClientTourUserPreferences3": "Ontwerp de startpagina van de web client volgens uw wensen",
     "WebClientTourUserPreferences4": "Configureer achtergronden, theme songs en externe spelers",
     "WebClientTourMobile1": "De web client werk perfect op smartphones en tablets...",
-    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
+    "WebClientTourMobile2": "en bedien eenvoudig je andere apparaten en Emby apps",
     "WebClientTourMySync": "Synchroniseer je persoonlijke media naar je apparaten om het offline te bekijken.",
     "MessageEnjoyYourStay": "Geniet van uw verblijf",
     "DashboardTourDashboard": "Het server-dashboard steld u in staat uw server en uw gebruikers te monitoren . U zult altijd weten wie wat doet en waar ze zijn.",
@@ -692,7 +692,7 @@
     "DashboardTourPlugins": "Installeer plugins zoals Internet videokanalen, live tv, metadata, scanners en meer.",
     "DashboardTourNotifications": "Meldingen van de server gebeurtenissen automatisch verzenden naar uw mobiele apparaat, e-mail en meer.",
     "DashboardTourScheduledTasks": "Beheer eenvoudig langlopende transacties met geplande taken. Beslis zelf wanneer ze worden uitgevoerd en hoe vaak.",
-    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
+    "DashboardTourMobile": "Het Emby Server dashboard werkt goed op smartphones en tablets. Beheer je server in de palm van je hand, altijd en overal.",
     "DashboardTourSync": "Synchroniseer je persoonlijke media naar je apparaten om het offline te bekijken.",
     "MessageRefreshQueued": "Vernieuwen wachtrij",
     "TabDevices": "Apparaten",
@@ -726,11 +726,11 @@
     "MessagePasswordResetForUsers": "Wachtwoorden zijn verwijderd van de volgende gebruikers:",
     "HeaderInviteGuest": "Nodig gast uit",
     "ButtonLinkMyEmbyAccount": "Koppel mijn account nu",
-    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
+    "MessageConnectAccountRequiredToInviteGuest": "Om gasten uit te kunnen nodigen moet je je Emby account aan deze server koppelen.",
     "ButtonSync": "Synchronisatie",
     "SyncMedia": "Synchroniseer media",
     "HeaderCancelSyncJob": "Annuleer synchronisatie",
-    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
+    "CancelSyncJobConfirmation": "Als je de synchroniseertaak annuleert wordt de gesynchroniseerde media bij de volgende synchroniseertaak van het apparaat verwijderd. Weet je zeker dat je door wilt gaan?",
     "TabSync": "Synchronisatie",
     "MessagePleaseSelectDeviceToSyncTo": "Selecteer een apparaat om mee te synchroniseren.",
     "MessageSyncJobCreated": "Synchronisatie taak gemaakt.",
