--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -407,7 +407,7 @@
     "OptionRecordOnAllChannels": "Programma van alle kanalen opnemen",
     "OptionRecordAnytime": "Programma elke keer opnemen",
     "OptionRecordOnlyNewEpisodes": "Alleen nieuwe afleveringen opnemen",
-    "HeaderRepeatingOptions": "Repeating Options",
+    "HeaderRepeatingOptions": "Herhaling opties",
     "HeaderDays": "Dagen",
     "HeaderActiveRecordings": "Actieve Opnames",
     "HeaderLatestRecordings": "Nieuwe Opnames",
@@ -888,9 +888,9 @@
     "LabelHomePageSection2": "Startpagina sectie 2:",
     "LabelHomePageSection3": "Startpagina sectie 3:",
     "LabelHomePageSection4": "Startpagina sectie 4:",
-    "OptionMyMediaButtons": "My media (buttons)",
-    "OptionMyMedia": "My media",
-    "OptionMyMediaSmall": "My media (small)",
+    "OptionMyMediaButtons": "Mijn media (knoppen)",
+    "OptionMyMedia": "Mijn media",
+    "OptionMyMediaSmall": "Mijn media (klein)",
     "OptionResumablemedia": "Hervatten",
     "OptionLatestMedia": "Nieuwste media",
     "OptionLatestChannelMedia": "Nieuwste kanaal items",
@@ -955,7 +955,7 @@
     "ViewTypeMovieFavorites": "Favorieten",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Nieuwste",
-    "ViewTypeMusicPlaylists": "Playlists",
+    "ViewTypeMusicPlaylists": "Afspeellijsten",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album artiesten",
     "HeaderOtherDisplaySettings": "Beeld instellingen",
@@ -1406,16 +1406,16 @@
     "LabelConversionCpuCoreLimitHelp": "Limiteer het aantal CPU cores wat gebruikt mag worden bij een omzetteing om te synchroniseren.",
     "OptionEnableFullSpeedConversion": "Schakel hoge converteren op hoge snelheid in",
     "OptionEnableFullSpeedConversionHelp": "Standaard wordt het converteren voor synchronisatie opdrachten op lage snelheid uitgevoerd zodat er weinig impact is op de server.",
-    "HeaderPlaylists": "Playlists",
-    "HeaderSelectDate": "Select Date",
-    "HeaderWelcomeExclamation": "Welcome!",
-    "HeaderMyPreferences": "My Preferences",
-    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
-    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
-    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
-    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
-    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
-    "HeaderViewStyles": "View Styles",
-    "LabelSelectViewStyles": "Enable rich presentations for:",
-    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
+    "HeaderPlaylists": "Afspeellijsten",
+    "HeaderSelectDate": "Selecteer Datum",
+    "HeaderWelcomeExclamation": "Welkom!",
+    "HeaderMyPreferences": "Mijn voorkeuren",
+    "ButtonMyPreferencesWelcomeYes": "Ja, ik wil mijn voorkeuren nu instellen.",
+    "ButtonMyPreferencesWelcomeNo": "Nee, bedankt, dat doe ik later.",
+    "MyPreferencesWelcomeMessage1": "We tonen je bibliotheek op een manier waarvan we denken dat je het fijn vindt. De weergave en groepering kan altijd aangepast worden aan jouw voorkeur. Je voorkeur wordt op al je Emby apps toegepast.",
+    "MyPreferencesWelcomeMessage2": "Wil je nu je voorkeuren instellen?",
+    "ToAccessPreferencesHelp": "Om je voorkeuren later te wijzigen, klik je op je gebruikersicoon rechtsboven en kies je Mijn voorkeuren.",
+    "HeaderViewStyles": "Bekijk stijlen",
+    "LabelSelectViewStyles": "Schakel uitgebreide weergave in voor:",
+    "LabelSelectViewStylesHelp": "Bij inschakelen zullen overzichten met met categori\u00ebn zolas suggesties, recente, genres en meer getoond worden. Bij uitschakelen worden simpele mappen getoond."
 }
