--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -7,7 +7,7 @@
     "LabelApiDocumentation": "API-dokumentasjon",
     "LabelDeveloperResources": "Ressurser for Utviklere",
     "LabelBrowseLibrary": "Browse biblioteket",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelConfigureServer": "Konfigurer Emby",
     "LabelOpenLibraryViewer": "\u00c5pne Biblioteket",
     "LabelRestartServer": "Restart serveren",
     "LabelShowLogWindow": "Se logg-vinduet",
@@ -21,12 +21,12 @@
     "ButtonQuickStartGuide": "Hurtigstartveiledning",
     "LabelYourFirstName": "Ditt fornavn",
     "MoreUsersCanBeAddedLater": "Du kan legge til flere brukere senere via Dashbord",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "UserProfilesIntro": "Emby har innebygd st\u00f8tte for brukerprofiler, slik at hver bruker har sine egne skjerminnstillinger, playstation og foreldrekontroll.",
     "LabelWindowsService": "Windows Service",
     "AWindowsServiceHasBeenInstalled": "Windows Service har blitt installert",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro1": "Emby Server normalt kj\u00f8rer som en desktop applikasjon, men hvis du foretrekker \u00e5 kj\u00f8re det som en bakgrunnstjeneste, kan det  i stedet startes fra Windows Services i kontrollpanelet.",
     "WindowsServiceIntro2": "Hvis du bruker Windows, v\u00e6r oppmerksom p\u00e5 at det ikke kan kj\u00f8res samtidig som ikonet, slik at du trenger \u00e5 g\u00e5 ut av \"trayen\" for \u00e5 kj\u00f8re tjenesten. Tjenesten m\u00e5 ogs\u00e5 konfigureres med administratorrettigheter via kontrollpanelet. V\u00e6r oppmerksom p\u00e5 at p\u00e5 denne tiden tjenesten ikke er i stand til selv-oppdatering, s\u00e5 nye versjoner vil kreve manuell interaksjon.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "WizardCompleted": "Det er alt vi trenger for n\u00e5. Emby har begynt \u00e5 samle informasjon om mediebiblioteket. Sjekk ut noen av v\u00e5re programmer, og klikk deretter <b> Fullf\u00f8r <\/b> for \u00e5 se <b> Server Dashboard<\/b>.",
     "LabelConfigureSettings": "Konfigurer innstillinger",
     "LabelEnableVideoImageExtraction": "Aktiv\u00e9r uthenting av stillbilder fra video",
     "VideoImageExtractionHelp": "For videoer som ikke allerede har bilder, og som vi ikke klarer \u00e5 finne internettbilder for. Dette gj\u00f8r at det f\u00f8rste biblioteks\u00f8ket tar noe lenger tid, men vil resultere i en mer tiltalende presentasjon.",
@@ -34,7 +34,7 @@
     "LabelChapterImageExtractionForMoviesHelp": "Uthenting av kapittelbilder gj\u00f8r klientene i stand til \u00e5 vise grafiske menyer for valg av scene. Prosessen kan v\u00e6re treg, CPU-intensiv og kan kreve sv\u00e6rt mange gigabytes lagringsplass. Dette kj\u00f8res som en nattlig oppgave, og kan konfigureres under Planlagte Aktiviteter. Det anbefales ikke \u00e5 kj\u00f8re denne jobben n\u00e5r serveren brukes til annet.",
     "LabelEnableAutomaticPortMapping": "Sl\u00e5 p\u00e5 automatisk port-mapping",
     "LabelEnableAutomaticPortMappingHelp": "UPnP tillater automatisert router-konfigurasjon for enkel ekstern tilgang. Denne funksjonen st\u00f8ttes ikke av alle routere.",
-    "HeaderTermsOfService": "Emby Terms of Service",
+    "HeaderTermsOfService": "Emby vilk\u00e5r for bruk.",
     "MessagePleaseAcceptTermsOfService": "Vennligst aksepter v\u00e5re servicevilk\u00e5r og personvernpolicy f\u00f8r du fortsetter.",
     "OptionIAcceptTermsOfService": "Jeg aksepterer servicevilk\u00e5rene",
     "ButtonPrivacyPolicy": "Personvernpolicy",
@@ -47,7 +47,7 @@
     "LabelDashboardSourcePathHelp": "Hvis serveren kj\u00f8rer fra kildekode, angi sti til mappe for dashboard-ui. Alle filer for webklienten kommer fra denne mappen.",
     "ButtonConvertMedia": "Konverter media",
     "ButtonOrganize": "Organiser",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "LinkedToEmbyConnect": "Knyttet til Emby Connect.",
     "HeaderSupporterBenefits": "Supporter Benefits",
     "HeaderAddUser": "Ny bruker",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
