--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -440,6 +440,7 @@
     "HeaderVideo": "Video",
     "HeaderRuntime": "Runtime",
     "HeaderCommunityRating": "Community rating",
+    "HeaderPasswordReset":  "Password Reset",
     "HeaderParentalRating": "Parental rating",
     "HeaderReleaseDate": "Release date",
     "HeaderDateAdded": "Date added",
