--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -119,7 +119,7 @@
     "MessageDeleteTaskTrigger": "Deseja realmente excluir este disparador de tarefa?",
     "MessageNoPluginsInstalled": "Voc\u00ea n\u00e3o possui plugins instalados.",
     "LabelVersionInstalled": "{0} instalado",
-    "LabelNumberReviews": "{0} Cr\u00edticas",
+    "LabelNumberReviews": "{0} Avalia\u00e7\u00f5es",
     "LabelFree": "Gr\u00e1tis",
     "HeaderPlaybackError": "Erro na Reprodu\u00e7\u00e3o",
     "MessagePlaybackErrorNotAllowed": "Voc\u00ea n\u00e3o est\u00e1 autorizado a reproduzir este conte\u00fado. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
@@ -537,7 +537,7 @@
     "MessageFeatureIncludedWithSupporter": "Voc\u00ea est\u00e1 registrado para este recurso e poder\u00e1 continuar usando-o com uma ades\u00e3o ativa de colaborador.",
     "MessageChangeRecurringPlanConfirm": "Depois de completar esta transa\u00e7\u00e3o voc\u00ea precisar\u00e1 cancelar sua doa\u00e7\u00e3o recorrente anterior dentro da conta do PayPal. Obrigado por colaborar com o Emby.",
     "MessageSupporterMembershipExpiredOn": "Sua ades\u00e3o de colaborador expirou em {0}.",
-    "MessageYouHaveALifetimeMembership": "Voc\u00ea possui uma ades\u00e3o de colaborador vital\u00edcia. Voc\u00ea pode fazer doa\u00e7\u00f5es adicionais individuais ou de forma  recorrente, usando as op\u00e7\u00f5es abaixo. Obrigado por colaborar com o Embu.",
+    "MessageYouHaveALifetimeMembership": "Voc\u00ea possui uma ades\u00e3o de colaborador vital\u00edcia. Voc\u00ea pode fazer doa\u00e7\u00f5es adicionais individuais ou de forma  recorrente, usando as op\u00e7\u00f5es abaixo. Obrigado por colaborar com o Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Voc\u00ea tem uma ades\u00e3o {0} ativa. Voc\u00ea pode atualizar seu plano usando as op\u00e7\u00f5es abaixo.",
     "ButtonDelete": "Excluir",
     "HeaderEmbyAccountAdded": "Conta do Emby Adicionada",
