--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -404,8 +404,8 @@
     "ButtonRefresh": "Vernieuwen",
     "ButtonAdvancedRefresh": "Geavanceerd vernieuwen",
     "OptionPriority": "Prioriteit",
-    "OptionRecordOnAllChannels": "Programma van alle kanalen opnemen",
-    "OptionRecordAnytime": "Programma elke keer opnemen",
+    "OptionRecordOnAllChannels": "Op alle kanalen opnemen",
+    "OptionRecordAnytime": "Op elk tijdstip opnemen",
     "OptionRecordOnlyNewEpisodes": "Alleen nieuwe afleveringen opnemen",
     "HeaderRepeatingOptions": "Herhaling opties",
     "HeaderDays": "Dagen",
@@ -551,7 +551,7 @@
     "LabelPublicHttpsPort": "Publieke https poort nummer:",
     "LabelPublicHttpsPortHelp": "Het publieke poortnummer dat moet worden toegewezen aan de lokale https poort.",
     "LabelEnableHttps": "Rapporteer https als extern adres",
-    "LabelEnableHttpsHelp": "Indien ingeschakeld, zal de server een https url rapporteren aan de client als het externe adres. Dit kan clients die nog geen ondersteuning voor https hebben onbruikbaar maken.",
+    "LabelEnableHttpsHelp": "Indien ingeschakeld, zal de server een https url rapporteren aan de client als het externe adres.",
     "LabelHttpsPort": "Lokale https poort nummer:",
     "LabelHttpsPortHelp": "Het tcp poort nummer waar Emby's http server aan moet verbinden.",
     "LabelWebSocketPortNumber": "Web socket poortnummer:",
@@ -1393,19 +1393,19 @@
     "LabelShowLibraryTileNamesHelp": "Bepaalt of labels onder de bibliotheek tegels zullen worden weergegeven op de startpagina",
     "OptionEnableTranscodingThrottle": "Throtteling inschakelen",
     "OptionEnableTranscodingThrottleHelp": "Throtteling zal automatisch de snelheid van het transcoderen aanpassen om de cpu belasting laag te houden tijdens het afspelen.",
-    "LabelUploadSpeedLimit": "Upload limiet (mbps):",
+    "LabelUploadSpeedLimit": "Upload limiet (Mbps):",
     "OptionAllowSyncTranscoding": "Sta synchronisatie toe die transcodering vereist",
     "HeaderPlayback": "Media afspelen",
     "OptionAllowAudioPlaybackTranscoding": "Sta het afspelen van audio wat transcoding vereist toe",
     "OptionAllowVideoPlaybackTranscoding": "Sta het afspelen van video wat transcoding vereist toe",
     "OptionAllowMediaPlaybackTranscodingHelp": "Gebruikers zullen een bericht ontvangen als afspelen niet is toegestaan op basis van het beleid",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Client bitrate limiet (mbps):",
+    "LabelRemoteClientBitrateLimit": "Client bitrate limiet (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "Een optionele streaming bitrate limiet voor alle clients. Dit wordt gebruikt om te voorkomen dat clients een hogere bitrate aanvragen dan de internet connectie kan leveren.",
     "LabelConversionCpuCoreLimit": "CPU core limiet:",
     "LabelConversionCpuCoreLimitHelp": "Limiteer het aantal CPU cores wat gebruikt mag worden bij een omzetteing om te synchroniseren.",
     "OptionEnableFullSpeedConversion": "Schakel hoge converteren op hoge snelheid in",
-    "OptionEnableFullSpeedConversionHelp": "Standaard wordt het converteren voor synchronisatie opdrachten op lage snelheid uitgevoerd zodat er weinig impact is op de server.",
+    "OptionEnableFullSpeedConversionHelp": "Standaard wordt het converteren voor synchronisatie opdrachten op lage snelheid uitgevoerd zodat er zo min mogelijke impact is op de server.",
     "HeaderPlaylists": "Afspeellijsten",
     "HeaderSelectDate": "Selecteer Datum",
     "HeaderWelcomeExclamation": "Welkom!",
