--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -456,7 +456,7 @@
     "LabelTime": "Hora:",
     "LabelEvent": "Evento:",
     "OptionWakeFromSleep": "Despertar da hiberna\u00e7\u00e3o",
-    "LabelEveryXMinutes": "Todo(a):",
+    "LabelEveryXMinutes": "A cada:",
     "HeaderTvTuners": "Sintonizador",
     "HeaderGallery": "Galeria",
     "HeaderLatestGames": "Jogos Recentes",
