update login page

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1441,11 +1441,11 @@
     "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
     "ButtonSkip": "Skip",
     "TextConnectToServerManually": "Connect to server manually",
-    "ButtonNewServer": "New Server",
     "ButtonSignInWithConnect": "Sign in with Emby Connect",
-    "HeaderNewServer": "New Server",
     "ButtonConnect": "Connect",
     "LabelServerHost": "Host:",
     "LabelServerHostHelp": "192.168.1.100 or https://myserver.com",
-    "LabelServerPort": "Port:"
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer":  "Change Server"
 }
