--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -440,7 +440,7 @@
     "HeaderVideo": "Video",
     "HeaderRuntime": "Runtime",
     "HeaderCommunityRating": "Community rating",
-    "HeaderPasswordReset":  "Password Reset",
+    "HeaderPasswordReset": "Password Reset",
     "HeaderParentalRating": "Parental rating",
     "HeaderReleaseDate": "Release date",
     "HeaderDateAdded": "Date added",
@@ -767,5 +767,8 @@
     "SyncJobItemStatusCancelled": "Cancelled",
     "LabelProfile": "Profile:",
     "LabelBitrateMbps": "Bitrate (Mbps):",
-    "EmbyIntroDownloadMessage":  "To download and install Emby Server visit {0}."
+    "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
+    "ButtonNewServer": "New Server",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "HeaderNewServer": "New Server"
 }
